[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/agarrrasteespada.gd" type="Script" id=1]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.3322
height = 16.684

[node name="textoDesaparecible" type="Area2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.90735e-06, -1.90735e-06 )
rotation = 1.18256
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 57.5
margin_top = -6.5
margin_right = 237.5
margin_bottom = 7.5
text = "E para golpear con la espada"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="." to="." method="_on_textoDesaparecible_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_textoDesaparecible_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
